<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:menu="menu_add_todo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <EditText
            android:id="@+id/et_title_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/et_content_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:lines="5"
            android:gravity="top|start"
            android:maxLines="5"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_below="@id/et_title_todo"/>

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginBottom="@dimen/medium_margin"
            android:hint="@string/start_date"
            android:layout_below="@id/et_content_desc"/>

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginBottom="@dimen/medium_margin"
            android:hint="@string/finish_date"
            android:layout_below="@id/et_start_date"/>

        <Button
            android:id="@+id/btn_save_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_end_date"
            android:text="@string/save"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</ScrollView>